@@ -40,8 +40,10 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
 - 05/03/2022
 17. base/envdir.c: fixed variable sa getting overwritten by openreadclose()
 - 09/03/2022
-18. base/use_getpwgr.c: use 4096 as default buffer size on FreeBSD
+18. base/use_qgetpwgr.c: use 4096 as default buffer size on FreeBSD
    sysconf _SC_GETPW_R_SIZE_MAX returns -1.
+- 18/03/2022
+19. base/use_qgetpwgr.c: Fixed SIGSEG caused by extra copy in byte_copy
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
